--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,13 @@
     "from bs4 import BeautifulSoup\n",
     "from nltk import word_tokenize, sent_tokenize\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import LancasterStemmer, WordNetLemmatizer\n"
+    "from nltk.stem import LancasterStemmer, WordNetLemmatizer\n",
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +62,8 @@
     "        new_word = re.sub(r'[^\\w\\s]', '', word)\n",
     "        if new_word != '':\n",
     "            new_words.append(new_word)\n",
+    "        else:\n",
+    "            new_words.append(\"No normalized version\")\n",
     "    return new_words\n",
     "\n",
     "def replace_numbers(words):\n",
@@ -68,6 +71,9 @@
     "    p = inflect.engine()\n",
     "    new_words = []\n",
     "    for word in words:\n",
+    "        if word == \"No normalized version\":\n",
+    "            new_words.append(\"No normalized version\")\n",
+    "            continue\n",
     "        if word.isdigit():\n",
     "            new_word = p.number_to_words(word)\n",
     "            new_words.append(new_word)\n",
@@ -81,6 +87,8 @@
     "    for word in words:\n",
     "        if word not in stopwords.words('english'):\n",
     "            new_words.append(word)\n",
+    "        else:\n",
+    "            new_words.append(\"No normalized version\")\n",
     "    return new_words\n",
     "\n",
     "def stem_words(words):\n",
@@ -112,53 +120,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('president', 'NN'), ('would', 'MD'), ('nt', 'VB'), ('say', 'VB'), ('would', 'MD'), ('definitely', 'RB'), ('declare', 'VB'), ('emergency', 'NN'), ('told', 'VBD'), ('reporters', 'NNS'), ('declaration', 'NN'), ('help', 'NN'), ('process', 'NN')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Preparing data structure to hold all sentence/word features/classifications\n",
+    "sent_feats = {}\n",
+    "\n",
     "# preprocessing data\n",
     "for article_content in article_contents[\"content\"]:\n",
+    "    sent_feats[\"canonical_sentence\"] = article_content\n",
+    "    sent_feats[\"word_level_features\"] = {}\n",
+    "    # tokenization\n",
     "    article_words = nltk.word_tokenize(article_content)\n",
+    "    for word_ix, word in enumerate(article_words):\n",
+    "        sent_feats[\"word_level_features\"][word_ix] = {}\n",
+    "        sent_feats[\"word_level_features\"][word_ix][\"canonical\"] = word\n",
+    "    # normalization, e.g. stemming\n",
     "    normalized_article_words = normalize(article_words)\n",
-    "    normalized_article_words_postags = nltk.pos_tag(normalized_article_words)\n",
-    "    print(normalized_article_words_postags)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     /home/mavram/nltk_data...\n",
-      "[nltk_data]   Unzipping taggers/averaged_perceptron_tagger.zip.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nltk.download('averaged_perceptron_tagger')"
+    "    for word_ix, word in enumerate(normalized_article_words):\n",
+    "        sent_feats[\"word_level_features\"][word_ix][\"normalized\"] = word\n",
+    "    # part of speech tagging\n",
+    "    normalized_article_words_postags = nltk.pos_tag(article_words)\n",
+    "    for word_ix, postag_tuple in enumerate(normalized_article_words_postags):\n",
+    "        # 0 index is the word, 1 index is the pos tag\n",
+    "        sent_feats[\"word_level_features\"][word_ix][\"pos_tag\"] = postag_tuple[1]"
    ]
   },
   {
@@ -166,7 +152,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sentiment Analysis Using Vader: https://github.com/cjhutto/vaderSentiment\n",
+    "sentiment_analyzer = SentimentIntensityAnalyzer()\n",
+    "for article_content in article_contents[\"content\"]:\n",
+    "    sentence_level_sentiment = \\\n",
+    "        sentiment_analyzer.polarity_scores(article_content)\n",
+    "    sent_feats[\"sentence_sentiment\"] = sentence_level_sentiment\n",
+    "    for key, word in sent_feats[\"word_level_features\"].items():\n",
+    "        sent_feats[\"word_level_features\"][key][\"sentiment\"] = \\\n",
+    "            sentiment_analyzer.polarity_scores(sent_feats[\"word_level_features\"][key][\"canonical\"])\n",
+    "print(sent_feats)"
+   ]
   }
  ],
  "metadata": {
